<resources>
    <string name="app_name">OverTimer</string>
    <string name="welcome">Welcome!</string>
    <string name="hours_worked">Hours worked</string>
    <string name="overtime">Overtime</string>
    <string name="register_hours">Register Hours</string>
    <string name="monday">Monday</string>
    <string name="from">from</string>
    <string name="default_start_time">09:00</string>
    <string name="default_end_time">17:00</string>
    <string name="until">until</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="set_weekhours_description">Check the boxes of the weekdays you work and fill in the start- and end-times. Click on the times to change them. Press submit to save your hours.</string>
    <string name="submit">Submit</string>
    <string name="dialogue_description">Select your work-date, and then enter a start-time and end-time or fill in the total amount of hours</string>
    <string name="set_weekhours">Set Weekhours</string>
    <string name="export_logs">Export logs</string>
    <string name="default_date">22–01-2022</string>
    <string name="zero">0</string>
    <string name="total_hours_worked">Total hours worked</string>
</resources>