<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialogue_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dialogue_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialogue_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="22-01-2022"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogue_description" />

    <TextView
        android:id="@+id/dialogue_start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/start_time"
        app:layout_constraintEnd_toStartOf="@id/dialogue_start_time"
        app:layout_constraintTop_toBottomOf="@id/dialogue_date_picker" />

    <TextView
        android:id="@+id/dialogue_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_start_time"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/dialogue_end_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialogue_start_time_text" />

    <TextView
        android:id="@+id/dialogue_end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/end_time"
        app:layout_constraintEnd_toStartOf="@id/dialogue_end_time"
        app:layout_constraintTop_toTopOf="@id/dialogue_start_time_text" />

    <TextView
        android:id="@+id/dialogue_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_end_time"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialogue_start_time"
        app:layout_constraintTop_toTopOf="@id/dialogue_start_time_text"  />

    <EditText
        android:id="@+id/dialogue_work_hours_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="0"
        android:inputType="number"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogue_start_time_text" />

    <TextView
        android:id="@+id/dialogue_work_hours_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total hours worked"
        app:layout_constraintTop_toBottomOf="@id/dialogue_work_hours_num"
        app:layout_constraintStart_toStartOf="@id/dialogue_work_hours_num"
        app:layout_constraintEnd_toEndOf="@id/dialogue_work_hours_num"/>




</androidx.constraintlayout.widget.ConstraintLayout>