<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/overtime_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Overtime"
        android:hint="@string/overtime"
        android:textAlignment="center"
        android:textSize="64sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/worked_text"
        app:layout_constraintBottom_toTopOf="@id/button_register_hours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"/>

    <TextView
        android:id="@+id/worked_text"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:text="@string/hours_worked"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hours_progress"/>

    <TextView
        android:id="@+id/overtime_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overtime"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overtime_num" />

    <ProgressBar
        android:id="@+id/hours_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/pb_circular_determinative"
        app:layout_constraintBottom_toTopOf="@+id/overtime_num"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:progress="70" />

    <TextView
        android:id="@+id/hours_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/hours_progress"
        app:layout_constraintEnd_toEndOf="@+id/hours_progress"
        app:layout_constraintStart_toStartOf="@+id/hours_progress"
        app:layout_constraintTop_toTopOf="@+id/hours_progress"
        tools:text="70%" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/action_bar_main"
        app:title="@string/app_name"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/button_register_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/register_hours"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>